--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.54.0",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
